# rsgen

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/cli/: generate.rs
