[package]
name = "rsgen"
version = "0.0.1"
authors = ["Chris Jackett"]
edition = "2021"
description = "A Rust Generative AI Co-pilot"
license = "MIT"
readme = "README.md"
repository = "https://github.com/cjackett/rsgen"
homepage = "https://github.com/cjackett/rsgen"
documentation = "https://docs.rs/rsgen"
keywords = ["Rust", "CLI", "LLM"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
assert_cmd = "2.0"
tempfile = "3.12"

[[bin]]
name = "rsgen"
path = "src/main.rs"

[profile.release]
opt-level = "z"
debug = false

[package.metadata.docs.rs]
features = ["extra-logging"]
